# server/src/api/passport/localStrategy.ts
@@ -15,7 +15,8 @@ export default () => {
         try {
           const exUser = await Users.findOne({ where: { uid } });
           if (exUser) {
-            const result = await bcrypt.compare(password, exUser.password);
+            // const result = await bcrypt.compare(password, exUser.password);
+            const result = password === exUser.password;
             if (result) {
               done(null, exUser);
             } else {
