# server/src/api/routes/auth/auth.ts
@@ -1,42 +1,0 @@
-import * as express from "express";
-import * as passport from "passport";
-import { findUser, createUser } from "./service";
-
-export const handleJoin = async (req, res, next) => {
-  const { uid, password }: { uid: string; password: string } = req.body;
-  try {
-    const exUser = await findUser({ uid });
-    if (exUser) {
-      res.send({ test: "해당 아이디 존재" });
-    }
-    await createUser({ uid, password });
-    res.send({ test: "회원가입 성공" });
-  } catch (error) {
-    next(error);
-  }
-};
-
-export const handleLogin = (req, res, next) => {
-  passport.authenticate("local", (authError, user, info) => {
-    if (authError) {
-      next(authError);
-    }
-    if (!user) {
-      res.send({ test: "회원정보 불일치", info: [info] });
-    }
-    return req.login(user, (loginError) => {
-      if (loginError) {
-        next(loginError);
-      }
-      res.send({ test: "로그인 성공" });
-    });
-  })(req, res, next);
-};
-
-export const handleLogOut = (req, res) => {
-  req.logout();
-  req.session.destroy(() => {
-    req.session;
-  });
-  res.send(true);
-};
