# server/src/public/swagger.yaml
@@ -91,8 +91,20 @@ paths:
                   },
                 ]
   /api/auth/login:
-    get:
+    post:
       summary: 로그인 버튼 클릭(유저 정보 받아오기)
+      parameters:
+        - name: ID_password
+          in: header
+          required: true
+          description: 아이디, 비밀번호
+          schema:
+            type: object
+            properties:
+              uid:
+                type: string
+              password:
+                type: string
       responses:
         '200':
           description: 유저 정보
@@ -113,7 +125,13 @@ paths:
           schema:
             type: object
             properties:
-                id: 
+                uid: 
+                  type: string
+                password:
+                  type: string
+                email:
+                  type: string
+                name:
                   type: string
                 image:
                   type: number
